--- a/.github/workflows/feature-phase-1-authentication_fabrikam-api-development-gcpm.yml
+++ b/.github/workflows/feature-phase-1-authentication_fabrikam-api-development-gcpm.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - fabrikam-api-Development-gcPm
+name: Build and deploy ASP.Net Core app to Azure Web App - fabrikam-api-Development-gcpm
 
 on:
   push:
@@ -24,10 +24,10 @@ jobs:
           dotnet-version: '9.x'
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build FabrikamApi/src/FabrikamApi.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish FabrikamApi/src/FabrikamApi.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -59,7 +59,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'fabrikam-api-Development-gcPm'
+          app-name: 'fabrikam-api-Development-gcpm'
           slot-name: 'Production'
           package: .
           
