--- a/.github/workflows/feature-phase-1-authentication_fabrikam-mcp-development-gcpm.yml
+++ b/.github/workflows/feature-phase-1-authentication_fabrikam-mcp-development-gcpm.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - fabrikam-mcp-Development-gcPm
+name: Build and deploy ASP.Net Core app to Azure Web App - fabrikam-mcp-Development-gcpm
 
 on:
   push:
@@ -24,10 +24,10 @@ jobs:
           dotnet-version: '9.x'
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build FabrikamMcp/src/FabrikamMcp.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish FabrikamMcp/src/FabrikamMcp.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -51,15 +51,15 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_CA8EACE87C8A46C89A95875D2D22D5C3 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_060DE05EDA424C5D9BB087852328F089 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_E71E854868844EA7AD6C4B452DA2CFF5 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_29B4EF3DBC844C0497D78A892663083F }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_DA46675EBD23436CA352D69E2D61A3A8 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_979D68C1ACA8421E8A15742DB672A33E }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'fabrikam-mcp-Development-gcPm'
+          app-name: 'fabrikam-mcp-Development-gcpm'
           slot-name: 'Production'
           package: .
           
